--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix = "0.12"
+actix = "0.13"
 actix-web = { version = "4", features = ["rustls"] }
 actix-web-actors = "4"
 actix-tls = "3"
@@ -17,3 +17,7 @@ serde_json = "1"
 toml = "0.5"
 log = "0.4"
 env_logger = "0.8"
+protobuf = { version = "~2", features = ["with-bytes"] }
+
+[build-dependencies]
+protobuf-codegen-pure = "~2"
