--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = "1"
 actix = "0.13"
 actix-web = { version = "4", features = ["rustls"] }
 actix-web-actors = "4"
@@ -19,6 +20,13 @@ log = "0.4"
 env_logger = "0.8"
 protobuf = { version = "~2", features = ["with-bytes"] }
 rand = "0.8"
+tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
+deadpool = "0.9"
+deadpool-postgres = "0.10"
+redis = "0.21"
+deadpool-redis = "0.10"
+uuid = { version = "0.8", features = ["v4"] }
+sha2 = "0.10"
 
 [build-dependencies]
 protobuf-codegen-pure = "~2"
