--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 actix = "0.13"
-actix-web = { version = "4", features = ["rustls"] }
+actix-web = { version = "4", features = ["rustls", "cookies"] }
 actix-web-actors = "4"
 actix-tls = "3"
 actix-files = "0.6"
