--- a/client/package.json
+++ b/client/package.json
@@ -225,6 +225,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "antd": "^4.19.2",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.6",
     "electron-updater": "^4.6.5",
