--- a/client/package.json
+++ b/client/package.json
@@ -227,6 +227,7 @@
   "dependencies": {
     "antd": "^4.19.2",
     "electron-debug": "^3.2.0",
+    "electron-dl": "^3.3.0",
     "electron-log": "^4.4.6",
     "electron-updater": "^4.6.5",
     "history": "^5.3.0",
